keshif updates: - Zooming in/out in the summary used to color-map in record display correctly adjusts the color to the visible range. - Changing the color-map summary automatically updates browser layout (so the color scale is directly visible). - Support for multi-values areas in geo-summaries.   - Highlighting an area shows the co-occurances in other areas. - Scale tick rendering (for values) is improved in numeric summaries   - 15000 -> 15k   - In cases where the numbers are floating point, the scale was set to .00 precision.   - Now, keshif decides on the tick display based on if the ticks are floating or not (not the values. - Zooming into a range that starts from 0 does not cause an error if log-scale type is preferred. - Map summaries are not animated contiously for preview selection (distracting design with little utility) - Ability to change the longitude wrapping (TEMPORARY design)

--- a/keshif.less
+++ b/keshif.less
@@ -2921,9 +2921,10 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       .lineTrend.preview{ opacity: 1 !important; }
       .previewLine{ opacity: 1 !important; }
       &[ratiomode=false] .mapGlyph > .aggr.preview{
-        .animation(mapPreviewAnimation 800ms infinite ease-in-out);
+        opacity: 1;
+//        .animation(mapPreviewAnimation 800ms infinite ease-in-out);
       }
-      &[ratiomode=true] .mapGlyph > .aggr.preview{
+      .mapGlyph > .aggr.preview{
         opacity: 1;
       }
     }
